# fromtion-lead-notion

./: .gitignore  CLAUDE.md  README.md  start-dev.sh  start.sh  stop.sh
.serena/: project.yml
backend/: README.md  create_user.py  env.template  migrate_db.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  bookmarks.py  deps.py  events.py  leads.py  notion.py  projects.py  webhooks.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  bookmark.py  event_log.py  lead.py  project.py  user.py
backend/app/schemas/: __init__.py  bookmark.py  event.py  lead.py  project.py  user.py
backend/app/services/: __init__.py  webhook.py
docs/: database-migration.md
docs/i18n/: README.en.md  README.es.md  README.ja.md  README.zh.md
docs/prd/: 00-problem-and-opportunity.md  01-goals-and-non-goals.md  02-user-scenarios.md  03-ux-patterns.md  04-blinding-methods.md  05-user-flows.md  06-creator-flows.md  07-settings.md  08-behavior-rules.md  09-data-spec.md  10-screen-layouts.md  11-development-scope.md  12-quality-security.md  13-success-metrics.md  14-edge-cases.md  15-mvp-flexibility.md  16-open-issues.md  17-summary.md  prd.md
docs/prd/brand/: brand-overview.md  brand-story.md  copy-guidelines.md  design-system.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: GuestBanner.tsx  LoginPromptModal.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
(+39 files in other folders)
