[project]
name = "formtion-backend"
version = "0.1.0"
description = "FORMTION - Notion 콘텐츠 블라인드 + 리드 수집 게이트 도구"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastAPI 프레임워크
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # 데이터베이스 (SQLite)
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",
    # 인증
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0.0",
    "python-multipart>=0.0.6",
    # 유효성 검사
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0.post1",
    # HTTP 클라이언트 (Webhook)
    "httpx>=0.26.0",
    # 유틸리티
    "python-dotenv>=1.0.0",
    "uuid6>=2024.1.12",
    # Rate Limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
]

[dependency-groups]
dev = [
    "ruff>=0.1.14",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

